syntax = "proto3";
package remes.remes.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "remes/x/remes/types";

// PinningIncentive represents a node's commitment to pin IPFS content
message PinningIncentive {
  // Node address that committed to pinning
  string node_address = 1;
  
  // IPFS hash of the content being pinned
  string ipfs_hash = 2;
  
  // Stake amount committed for pinning (in R3MES tokens)
  string stake = 3;
  
  // Reward rate per block for successful pinning
  string reward_rate = 4;
  
  // Commitment start time
  google.protobuf.Timestamp commitment_start = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  
  // Commitment end time (optional, for time-limited commitments)
  google.protobuf.Timestamp commitment_end = 6 [(gogoproto.stdtime) = true];
  
  // Status: active, challenged, slashed, completed
  string status = 7;
  
  // Last verification time
  google.protobuf.Timestamp last_verification = 8 [(gogoproto.stdtime) = true];
  
  // Challenge count (number of times challenged)
  uint64 challenge_count = 9;
  
  // Total rewards earned
  string total_rewards = 10;
}

// DataAvailabilityChallenge represents a challenge to verify pinning
message DataAvailabilityChallenge {
  // Challenge ID
  uint64 challenge_id = 1;
  
  // Challenger address
  string challenger = 2;
  
  // Pinning incentive being challenged
  string node_address = 3;
  
  // IPFS hash being challenged
  string ipfs_hash = 4;
  
  // Challenge time
  google.protobuf.Timestamp challenge_time = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  
  // Response deadline
  google.protobuf.Timestamp response_deadline = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  
  // Status: pending, responded, failed, resolved
  string status = 7;
  
  // Response proof (IPFS hash of proof data)
  string response_proof = 8;
  
  // Resolution time
  google.protobuf.Timestamp resolution_time = 9 [(gogoproto.stdtime) = true];
}

